further cleanup with sonarLint